   o Added "readdir" command.
===============================================================================
23 Jan 94: Released TclX7.3a-p1 (patch and full release).
===============================================================================
 5 Feb 94:
   o Fixed SVR4 portability problems.
   o Fixed problem with convertclock on DEC Alpha.
-------------------------------------------------------------------------------
 8 Feb 94:
   o Used setvbuf if its available instead of setlinebuf, as setlinebuf appears
     broken on Ultrix.
===============================================================================
24 Jan 94: Released TclX7.3a-p2 (patch and full release).
===============================================================================
 16 Mar 94:
   o Fixed problem with configure detecting the "timezone" variable on some
     systems,
   o Integrate changes to support SGI IRIX.
-------------------------------------------------------------------------------
 5 May 94:
   o Fixed bug in union function not handling the first element of each
     list being the same.
   o Change select command to support new linux stdio library.
-------------------------------------------------------------------------------
16 May 94:
   o Added signal command wildcard (*) to specify all modifiable signals.
   o Added "signal set" to restore state of signals saved with "signal get".
   o Added "infox have_flock" option.
-------------------------------------------------------------------------------
28 Jun 94:
   o Modified server_open to try other addresses for a hostname when connect
     fails.
   o Added the server_info command.
   o Always go through Tcl file table for commands like echo and commandloop.
     This make sure redirected stdin, stdout and stderr are picked up.
===============================================================================
29 Jun 94: Released TclX7.3b-beta1.
===============================================================================