@@ -13,10 +13,10 @@ dnl  Although the generated configure script is under the GNU Public,
 dnl  License Extended Tcl remains freely redistributable for any purpose,
 dnl  including commercial use.
 dnl----------------------------------------------------------------------------
-dnl $Id: configure.in,v 3.14 1994/05/30 20:29:27 markd Exp markd $
+dnl $Id: configure.in,v 3.15 1994/06/30 06:14:31 markd Exp markd $
 dnl----------------------------------------------------------------------------
 AC_INIT(src/tclExtend.h)
-ifdef([AC_REVISION],AC_REVISION($Revision: 3.14 $),)dnl
+ifdef([AC_REVISION],AC_REVISION($Revision: 3.15 $),)dnl
 
 AC_CONFIG_HEADER(src/tclXconfig.h)
 
@@ -448,6 +448,14 @@ case `uname -sr 2>/dev/null` in
 esac
 
 AC_SUBST(LIBOBJS)
+
+#------------------------------------------------------------------------------
+# Determine if random is declared in stdlib.h.  If it is, we don't want to
+# redeclare it.  Some systems, such as the DEC Alpha, have random declared
+# are returning int rather than long, since long is 64 bit.
+#------------------------------------------------------------------------------
+
+AC_HEADER_EGREP(stdlib.h, AC_DEFINE(STDLIB_DEFS_RANDOM))
 
 #------------------------------------------------------------------------------
 #       If Config.mk is not in the build directory, copy it local.
